crates/nvs-ir/src/lower/snapshots/nvs_ir__lower__tests__a_reference_argument_lowers_in_any_expression_position.snap
---
source: crates/nvs-ir/src/lower/mod.rs
expression: text
---
fn <script>() -> tagged {
  bb0:
    safepoint
    ; stmt s0 @5:14-5:25
    v0 = const.int 1  ; int
    ; stmt s1 @6:1-6:101
    v1 = const.str "a="  ; string
    v2 = class.desc Adder  ; classdesc
    v3 = ref.slot v0  ; ref
    v4 = call Adder::bump(this: v2, v3) ! bb1  ; int
    v5 = ref.load v3  ; int
    v6 = helper.int_to_string v4  ; string
    v7 = const.str " then "  ; string
    v8 = helper.int_to_string v5  ; string
    v9 = const.str " and "  ; string
    v10 = class.desc Adder  ; classdesc
    v11 = ref.slot v5  ; ref
    v12 = call Adder::bump(this: v10, v11) ! bb2  ; int
    v13 = ref.load v11  ; int
    v14 = helper.int_to_string v12  ; string
    v15 = const.str " then "  ; string
    v16 = helper.int_to_string v13  ; string
    v17 = concat v1, v6, v7, v8, v9, v14, v15, v16  ; string
    release v1
    release v6
    release v7
    release v8
    release v9
    release v14
    release v15
    release v16
    helper.echo_str v17 ! bb3
    release v17
    return
  bb1:
    release v1
    propagate "<script>() at t.nvs:6"
  bb2:
    release v1
    release v6
    release v7
    release v8
    release v9
    propagate "<script>() at t.nvs:6"
  bb3:
    release v17
    propagate "<script>() at t.nvs:6"
}
