crates/nvs-ir/src/lower/snapshots/nvs_ir__lower__tests__a_script_body_echoes_a_string_literal.snap
---
source: crates/nvs-ir/src/lower/tests.rs
expression: "print_function(&f, map.file(file))"
---
fn <script>() -> tagged {
  bb0:
    safepoint
    ; stmt s0 @2:1-2:22
    v0 = const.str "Hello, World!"  ; string
    helper.echo_str v0 ! bb1
    release v0
    v1 = const.int 1  ; int
    v2 = tag v1  ; tagged
    return v2
  bb1:
    release v0
    propagate "<script>() at t.nvs:2"
}
