crates/nvs-ir/src/lower/snapshots/nvs_ir__lower__tests__a_script_body_local_is_an_ordinary_local.snap
---
source: crates/nvs-ir/src/lower/mod.rs
expression: "print_function(&f, map.file(file))"
---
fn <script>() -> tagged {
  bb0:
    safepoint
    ; stmt s0 @2:1-2:12
    v0 = const.int 1  ; int
    ; stmt s1 @3:1-3:13
    v1 = const.int 2  ; int
    v2 = add v0, v1 ! bb1  ; int
    ; stmt s2 @4:1-4:9
    v3 = helper.int_to_string v2  ; string
    helper.echo_str v3 ! bb2
    release v3
    return
  bb1:
    propagate "<script>() at t.nvs:3"
  bb2:
    release v3
    propagate "<script>() at t.nvs:4"
}
