crates/nvs-ir/src/lower/snapshots/nvs_ir__lower__tests__a_script_body_skips_declarations_and_enters_a_namespace_block.snap
---
source: crates/nvs-ir/src/lower/tests.rs
expression: "print_function(&f, map.file(file))"
---
fn <script>() -> tagged {
  bb0:
    safepoint
    ; stmt s0 @5:15-5:28
    v0 = const.str "in-ns"  ; string
    helper.echo_str v0 ! bb1
    release v0
    ; stmt s1 @6:1-6:14
    v1 = const.str "after"  ; string
    helper.echo_str v1 ! bb2
    release v1
    v2 = const.int 1  ; int
    v3 = tag v2  ; tagged
    return v3
  bb1:
    release v0
    propagate "<script>() at t.nvs:5"
  bb2:
    release v1
    propagate "<script>() at t.nvs:6"
}
