crates/nvs-ir/src/lower/snapshots/nvs_ir__lower__tests__a_second_write_reads_the_array_the_first_one_yielded.snap
---
source: crates/mwl-ir/src/lower/mod.rs
expression: "print_function(&f, map.file(file))"
---
fn m(object, array) -> void {
  bb0:
    safepoint
    v0 = param 0  ; object
    v1 = param 1  ; array
    ; stmt s0 @4:5-4:15
    v2 = const.int 0  ; int
    v3 = const.int 5  ; int
    v4 = array.set v1, v2, v3  ; array
    ; stmt s1 @5:5-5:15
    v5 = const.int 1  ; int
    v6 = const.int 6  ; int
    v7 = array.set v4, v5, v6  ; array
    release v7
    release v0
    return
}
