crates/nvs-ir/src/lower/snapshots/nvs_ir__lower__tests__a_short_circuit_and_nested_in_a_call_argument_composes.snap
---
source: crates/mwl-ir/src/lower/mod.rs
expression: "print_function(&f, map.file(file))"
---
fn m(object, bool, bool) -> void {
  bb0:
    safepoint
    v0 = param 0  ; object
    v1 = param 1  ; bool
    v2 = param 2  ; bool
    ; stmt s0 @4:5-4:26
    v3 = class.of v0  ; classdesc
    v4 = const.bool false  ; bool
    branch v1 -> bb1 (e0), bb2 (e1)
  bb1:
    jump bb2
  bb2:
    v5 = phi [bb0: v4, bb1: v2]  ; bool
    v6 = call T::take(this: v3, v5) ! bb3  ; void
    release v0
    return
  bb3:
    release v0
    propagate "m() at t.mwl:4"
}
