crates/nvs-ir/src/lower/snapshots/nvs_ir__lower__tests__a_spread_argument_lowers_to_the_positions_it_fills.snap
---
source: crates/nvs-ir/src/lower/mod.rs
expression: "print_function(&f, map.file(file))"
---
fn m(object, array) -> void {
  bb0:
    safepoint
    v0 = param 0  ; object
    v1 = param 1  ; array
    ; stmt s0 @4:5-4:31
    v2 = class.desc T  ; classdesc
    v3 = const.int 1  ; int
    v4 = const.int 2  ; int
    v5 = array.new ["0": v4]  ; array
    v6 = array.spread v5, v1 ! bb1  ; array
    v7 = call T::total(this: v2, v3, v6) ! bb2  ; void
    ; stmt s1 @5:5-5:28
    v8 = class.desc T  ; classdesc
    v9 = const.int 1  ; int
    v10 = array.new []  ; array
    v11 = array.spread v10, v1 ! bb3  ; array
    v12 = call T::total(this: v8, v9, v11) ! bb4  ; void
    release v1
    release v0
    return
  bb1:
    release v5
    release v1
    release v0
    propagate "m() at t.nvs:4"
  bb2:
    release v1
    release v0
    propagate "m() at t.nvs:4"
  bb3:
    release v10
    release v1
    release v0
    propagate "m() at t.nvs:5"
  bb4:
    release v1
    release v0
    propagate "m() at t.nvs:5"
}
